; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hyperv/storvsc/extr_hv_storvsc_drv_freebsd.c_is_scsi_valid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hyperv/storvsc/extr_hv_storvsc_drv_freebsd.c_is_scsi_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_inquiry_data = type { i32 }

@T_NODEVICE = common dso_local global i64 0, align 8
@SID_QUAL_BAD_LU = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scsi_inquiry_data*)* @is_scsi_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_scsi_valid(%struct.scsi_inquiry_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.scsi_inquiry_data*, align 8
  %4 = alloca i64, align 8
  store %struct.scsi_inquiry_data* %0, %struct.scsi_inquiry_data** %3, align 8
  %5 = load %struct.scsi_inquiry_data*, %struct.scsi_inquiry_data** %3, align 8
  %6 = call i64 @SID_TYPE(%struct.scsi_inquiry_data* %5)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @T_NODEVICE, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load %struct.scsi_inquiry_data*, %struct.scsi_inquiry_data** %3, align 8
  %13 = call i64 @SID_QUAL(%struct.scsi_inquiry_data* %12)
  %14 = load i64, i64* @SID_QUAL_BAD_LU, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %18

17:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %16, %10
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i64 @SID_TYPE(%struct.scsi_inquiry_data*) #1

declare dso_local i64 @SID_QUAL(%struct.scsi_inquiry_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
